# AutoNav2

./: .gitconfig  .gitignore
SegNet/: .gitignore  .gitignore.swp
SegNet/CamVid/: test.txt  train.txt  val.txt
SegNet/Example_Models/: train_segnet_sun.prototxt
SegNet/Models/: bayesian_segnet_basic_inference.prototxt  segnet_inference.prototxt  segnet_solver.prototxt  segnet_train.prototxt
SegNet/Models/Inference/: __for_calculating_BN_stats_segnet_train.prototxt
SegNet/Scripts/: compute_bn_statistics.py  compute_test_results.m  test_segmentation_camvid.py  test_segnet.sh  train_segnet.sh
experimental/angle-estimation/: CMakeLists.txt
experimental/angle-estimation/include/: helpers.h
experimental/angle-estimation/src/: find_deviation_angle.cpp  find_trajectory.cpp  find_trajectory_viso.cpp  helpers.cc  lk_track.py  trajectory_tracker.cpp
experimental/aruco/: detect_aruco_flycam_test.py  detect_aruco_image.py  detect_aruco_image_test.py
experimental/aruco-navigation/: GlobalController.py  GlobalControllerold.py  MobileCommunication.py  id_dict.txt  odometry.py
experimental/cam-calibration/: cam_params_flycap.yml
experimental/flycap/: VideoGrab.py
experimental/imu/: MobileCommunication.py  threading_imu.py
experimental/lcm/: CMakeLists.txt
experimental/obstacle-detection/: CMakeLists.txt
experimental/obstacle-detection/src/: obstacle_test.cpp
experimental/undistort/: CMakeLists.txt
experimental/undistort/src/: undistort_test.cpp
local-planner/: CMakeLists.txt
local-planner/src/: obstacle_process.cpp
resources/drh-visual-odometry/.svn/: all-wcprops  entries
resources/drh-visual-odometry/branches/.svn/: all-wcprops  entries
resources/drh-visual-odometry/branches/IncompleteCameraCalibration/.svn/: all-wcprops  entries
resources/drh-visual-odometry/branches/IncompleteCameraCalibration/CalibrationFiles/: Calibration.bat
resources/drh-visual-odometry/branches/IncompleteCameraCalibration/CalibrationFiles/.svn/: all-wcprops  entries
resources/drh-visual-odometry/branches/IncompleteCameraCalibration/Documentation/.svn/: all-wcprops  entries
resources/drh-visual-odometry/branches/IncompleteCameraCalibration/src/: VisualOdometry.sln
resources/drh-visual-odometry/branches/IncompleteCameraCalibration/src/.svn/: all-wcprops  entries
resources/drh-visual-odometry/branches/IncompleteCameraCalibration/src/BirdsEyeView.UI/: MainForm.Designer.cs  MainForm.cs
resources/drh-visual-odometry/branches/IncompleteCameraCalibration/src/CameraCalibration.Support/: HomographyMatrixSupport.cs
resources/drh-visual-odometry/branches/IncompleteCameraCalibration/src/CameraCalibrator/: CalibrateDialog.Designer.cs  CalibrateDialogModel.cs  CalibrationParametersForm.cs  CalibrationParametersFormModel.cs  CameraCalibrator.csproj  CaptureSettingsDialog.cs  MainForm.Designer.cs  MainForm.cs  MainModel.cs  Program.cs  TestForm.Designer.cs  TestFormModel.cs
resources/drh-visual-odometry/branches/IncompleteCameraCalibration/src/CameraCalibrator.WinForm.Support/: TestForm.Designer.cs  TestForm.cs
resources/drh-visual-odometry/branches/IncompleteCameraCalibration/src/CameraModelEstimation/: Program.cs
resources/drh-visual-odometry/branches/IncompleteCameraCalibration/src/Playground/: Program.cs
resources/drh-visual-odometry/branches/IncompleteCameraCalibration/src/Playground.UI/: Data.cs  MapForm.cs  MapForm.resx  Playground.UI.csproj
resources/drh-visual-odometry/branches/IncompleteCameraCalibration/src/VideoRecorder/: MainForm.Designer.cs  MainForm.cs  VideoRecorder.csproj  app.config
resources/drh-visual-odometry/branches/IncompleteCameraCalibration/src/Vision.WinFormSupport/: Vision.WinFormSupport.csproj
resources/drh-visual-odometry/branches/IncompleteCameraCalibration/src/VisualOdometry/: Angle.cs  Histogram.cs  OpticalFlowSettings.settings  RotationAnalyzer.cs  TranslationAnalyzer.cs  VisualOdometer.cs
resources/drh-visual-odometry/branches/IncompleteCameraCalibration/src/VisualOdometry.UI/: AuxiliaryViewsForm.cs  MainForm.Designer.cs  RotationAnalysisForm.Designer.cs  VisualOdometry.UI.csproj
resources/drh-visual-odometry/tags/.svn/: entries
resources/drh-visual-odometry/trunk/.svn/: all-wcprops  entries
resources/drh-visual-odometry/trunk/CalibrationFiles/: Calibration.bat  MicrosoftCinemaFocus14.txt  cameraParams.txt  default.build
resources/drh-visual-odometry/trunk/CalibrationFiles/.svn/: all-wcprops  entries
resources/drh-visual-odometry/trunk/CalibrationFiles/MicrosoftCinema/.svn/: all-wcprops  entries
resources/drh-visual-odometry/trunk/Documentation/.svn/: all-wcprops  entries
resources/drh-visual-odometry/trunk/Robot/.svn/: all-wcprops  entries
resources/drh-visual-odometry/trunk/Robot/Arduino/.svn/: all-wcprops  entries
resources/drh-visual-odometry/trunk/Robot/Arduino/PsxSpeedControl/: PsxSpeedControl.pde
resources/drh-visual-odometry/trunk/Robot/Arduino/SonyPlaystationController/: SonyPlaystationController.pde
resources/drh-visual-odometry/trunk/Robot/Documentation/.svn/: all-wcprops  entries
resources/drh-visual-odometry/trunk/src/.svn/: all-wcprops  entries
resources/drh-visual-odometry/trunk/src/BirdsEyeView.UI/: MainForm.cs
resources/drh-visual-odometry/trunk/src/BirdsEyeView.UI/.svn/: all-wcprops  (+1 more)
resources/drh-visual-odometry/trunk/src/CalibrationGrid/: CalibrationGridBuilder.sln  PrintingAndMountingCosts.txt
resources/drh-visual-odometry/trunk/src/CameraCalibration.Support/: CameraCalibrator.Support.csproj
resources/drh-visual-odometry/trunk/src/OpticalFlow/: MainForm.Designer.cs  app.config
resources/drh-visual-odometry/trunk/src/Playground.UI/: Form1.Designer.cs  MapForm.Designer.cs
resources/drh-visual-odometry/trunk/src/VisualOdometry/: HistogramBin.cs  OdometerSettings.Designer.cs  OpticalFlow.cs  PoseEventArgs.cs  RotationAnalyzer.cs  TrackedFeature.cs  VisualOdometer.cs
resources/drh-visual-odometry/trunk/src/VisualOdometry.UI/: MainForm.Designer.cs  MainForm.cs  MapForm.Designer.cs  MapForm.cs  RotationAnalysisForm.Designer.cs
resources/drh-visual-odometry/wiki/.svn/: entries
(+242 files in other folders)
